--- a/d-statistic-impl/pom.xml
+++ b/d-statistic-impl/pom.xml
@@ -10,4 +10,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>d-statistic-impl</artifactId>
+
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.12</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 </project>
