--- a/d-statistic-impl/pom.xml
+++ b/d-statistic-impl/pom.xml
@@ -12,6 +12,12 @@
   <artifactId>d-statistic-impl</artifactId>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.1.1</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
