--- a/d-statistic-impl/pom.xml
+++ b/d-statistic-impl/pom.xml
@@ -12,6 +12,12 @@
   <artifactId>d-statistic-impl</artifactId>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/jfree/jfreechart -->
+    <dependency>
+      <groupId>jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.0.13</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
     <dependency>
       <groupId>javax.ws.rs</groupId>
